Modified Text flow and styling.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button id="dice-button"><i class="fas fa-dice"></i>Random Name</button>
       </div>
       <div class="right-column" id="right-column">
-        <p id="result-container" class="hidden">Ikaw si: <span id="result"></span></p>
+        <p id="result-container" class="hidden">Ikaw si:<br><span id="result"></span></p>
         <div id="image-container" class="hidden">
           <img id="random-image" src="" alt="Random Image">
         </div>
