Modified description. Added attribution.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="left-column">
         <h1>Confidential Funds Name Generator</h1>
-        <p>Alamin kung ano dapat ang pangalan mo upang makatanggap ng confidential funds ni Sarah Duterte:</p>
+        <p>Ilagay ang araw ng iyong kaarawan upang malaman kung ano dapat ang pangalan mo para makatanggap ng confidential funds ni Sarah Duterte:</p>
         <form id="birthday-form">
           <label for="month"><i class="fas fa-calendar-alt"></i> Month:</label>
           <select id="month" name="month" required>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p>&copy; 2025 Confidential Funds Name Generator. All rights reserved.<br>Images are taken from google search while background is AI-generated using Adobe Firefly.</p>
+      <p>&copy; 2025 Confidential Funds Name Generator. All rights reserved.<br>Images are taken from google search while background is AI-generated using Adobe Firefly. Concept from a <a href="https://www.facebook.com/photo/?fbid=10162254015824648&set=a.10150967715549648">Facebook Meme.</a></p>
     </footer>
   </div>
   <script src="script.js"></script>
